<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />


    <org.mapsforge.android.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />
    

    <ToggleButton
        android:id="@+id/toggleButtonSnapToLocationView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/mapView"
        android:layout_alignTop="@+id/mapView"
        android:background="@drawable/btn_snap_normal"
        android:text="@string/touch"
        android:textOff="@string/touch_off"
        android:textColor="#0000ff"
         android:textStyle="bold"
        android:textOn="@string/touch_on" />

    <TextView
        android:id="@+id/locationManager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/textView2"
        android:textColor="#0000ff"
        android:textStyle="bold"
        android:text="@string/locationmanager" />

    <TextView
        android:id="@+id/locationManager1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/toggleButtonSnapToLocationView"
        android:layout_alignLeft="@+id/mapView"
        android:text="@string/locationmanager"
        android:textColor="#0000ff"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/locationManager2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/toggleButtonSnapToLocationView"
        android:layout_alignBottom="@+id/toggleButtonSnapToLocationView"
        android:layout_alignLeft="@+id/mapView"
        android:text="@string/locationmanager"
        android:textColor="#0000ff"
        android:textStyle="bold" />
    
    <Button
        android:id="@+id/button_undo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/mapView"
        android:layout_below="@+id/toggleButtonSnapToLocationView"
        android:text="@string/undo"
        android:textColor="#0000ff"
        android:textStyle="bold" />

</RelativeLayout>